--- a/config-sample.json
+++ b/config-sample.json
@@ -1,4 +1,4 @@
 {
-  "password": "changeme",
-  "token": ""
+  "password": "jedi3213",
+  "token": "762691353:AAGg-cFoPCfEB1RJD4baL8V1SH-mUnOzy3E"
 }
